# test-mujoco

./: .gitignore  CMakeLists.txt  README.md
model/: cartpole.xml
src/: main.cpp
